integrations: Fix buggy ol/paragraph spacing.
This appears to caused by trying to reuse this bit of spacing logic
from the Help Center's CSS rules.

I'm not altogether happy with this fix, but it resolves the issue and
we can defer further work until we're ready to clean up the
portico/landing pages CSS more generally.

--- a/static/styles/landing-page.scss
+++ b/static/styles/landing-page.scss
@@ -2524,11 +2524,6 @@ nav ul li.active::after {
     list-style: circle;
 }
 
-.portico-landing.integrations ol > li > p {
-    max-width: calc(100% - 33px);
-    margin-top: 0px;
-}
-
 .portico-landing code {
     display: inline-block;
     vertical-align: middle;
